tests/NormalTests/paczka1/fuzzy1/82615041.err
Error in line 7: YZxaQ S188 42,4
Error in line 2: mAc6cGphU A800 39,9
Error in line 10: mAc6cGphU S81 59,2
Error in line 17: ucrZ15nGt S962 43,40
Error in line 15: ucrZ15nGt A800 42,8
Error in line 5: S81 S962 75,9
Error in line 8: YZxaQ A800 66,9
Error in line 31: YZxaQ S188 151,9
